// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CatererMenu should render CatererMenu Component when it is connected to the redux store 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(CatererMenu)
    meals={
      [
        {
          "description": "Jollof Rice, Beef and Plantain. 2 pieces of beef per plate",
          "id": "81211c24-51c0-46ec-b1e0-18db55880958",
          "imageUrl": "http://www.preciouscore.com/wp-content/uploads/2017/11/How-to-cook-jollof-rice-in-the-oven-750x500.jpg",
          "price": "1500.00",
          "title": "Jollof Rice, Beef and Plantain",
          "vegetarian": false,
        },
        {
          "description": "Sharwama contains no animal products, perfect for dieters",
          "id": "36d525d1-efc9-4b75-9999-3e3d8dc64ce3",
          "imageUrl": "https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&h=350",
          "price": "1200.00",
          "title": "Vegetable Sharwama and Guava Smoothie",
          "vegetarian": true,
        },
      ]
    }
  >
    <CatererMenu
      currentDay="1970-01-01"
      fetchMenu={[Function]}
      meals={
        [
          {
            "description": "Jollof Rice, Beef and Plantain. 2 pieces of beef per plate",
            "id": "81211c24-51c0-46ec-b1e0-18db55880958",
            "imageUrl": "http://www.preciouscore.com/wp-content/uploads/2017/11/How-to-cook-jollof-rice-in-the-oven-750x500.jpg",
            "price": "1500.00",
            "title": "Jollof Rice, Beef and Plantain",
            "vegetarian": false,
          },
          {
            "description": "Sharwama contains no animal products, perfect for dieters",
            "id": "36d525d1-efc9-4b75-9999-3e3d8dc64ce3",
            "imageUrl": "https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&h=350",
            "price": "1200.00",
            "title": "Vegetable Sharwama and Guava Smoothie",
            "vegetarian": true,
          },
        ]
      }
      metadata={{}}
      setCurrentDay={[Function]}
      toggleModal={[Function]}
    >
      <Connect(View)
        showTime={false}
        type="menu"
        updateCurrentDate={[Function]}
      >
        <View
          isFetching={false}
          logout={[Function]}
          showTime={false}
          type="menu"
          updateCurrentDate={[Function]}
          uploading={false}
          user={
            {
              "address": "$, Herbert Macaulay Way, Yaba, Lagos",
              "businessName": "Food Circle",
              "email": "food@circle.com",
              "firstname": "Dave",
              "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
              "lastname": "Smith",
              "phoneNo": "08166557788",
              "role": "caterer",
            }
          }
        >
          <div
            className="admin"
          >
            <Header
              active="menu"
              dateType="menu"
              logout={[Function]}
              showTime={false}
              type="caterer"
              updateCurrentDate={[Function]}
              user={
                {
                  "address": "$, Herbert Macaulay Way, Yaba, Lagos",
                  "businessName": "Food Circle",
                  "email": "food@circle.com",
                  "firstname": "Dave",
                  "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
                  "lastname": "Smith",
                  "phoneNo": "08166557788",
                  "role": "caterer",
                }
              }
            >
              <div
                className="header"
              >
                <div
                  className="navbar"
                >
                  <Connect(CatererHeader)
                    dateType="menu"
                    showTime={false}
                    updateCurrentDate={[Function]}
                  >
                    <CatererHeader
                      currentDay="1970-01-01"
                      dateType="menu"
                      showTime={false}
                      toggleSideNav={[Function]}
                      updateCurrentDate={[Function]}
                    >
                      <div
                        className="menu-control d-none-md"
                      >
                        <Link
                          className="d-none-md"
                          clickHandler={[Function]}
                          data-tooltip-content={null}
                          data-tooltip-id={null}
                          id={null}
                        >
                          <button
                            className="link-btn d-none-md"
                            data-tooltip-content={null}
                            data-tooltip-id={null}
                            id={null}
                            onClick={[Function]}
                            type="button"
                          >
                            <img
                              alt="toggler"
                              src="/img/toggler.png"
                            />
                          </button>
                        </Link>
                      </div>
                      <div
                        className="page-title d-none-md"
                      >
                        <h3>
                          <Link
                            to="/"
                          >
                            <a
                              href="/"
                            >
                              BOOK-A-MEAL
                            </a>
                          </Link>
                        </h3>
                      </div>
                      <div
                        className="page-title d-flex-md"
                      >
                        <div
                          className="date"
                        >
                          <h2>
                            Thursday, 1st January 1970
                             
                            <span
                              style={
                                {
                                  "cursor": "pointer",
                                }
                              }
                            >
                               ▾
                            </span>
                          </h2>
                          <DatePicker
                            handleSelectDate={[Function]}
                            screenSize="md"
                          >
                            <div
                              className="datepicker-div d-flex-md"
                            >
                              <input
                                id="datepicker"
                                onChange={[Function]}
                                type="date"
                              />
                            </div>
                          </DatePicker>
                        </div>
                      </div>
                    </CatererHeader>
                  </Connect(CatererHeader)>
                </div>
              </div>
            </Header>
            <div
              className="content"
            >
              <Connect(SideNav)
                active="menu"
                logout={[Function]}
                user={
                  {
                    "address": "$, Herbert Macaulay Way, Yaba, Lagos",
                    "businessName": "Food Circle",
                    "email": "food@circle.com",
                    "firstname": "Dave",
                    "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
                    "lastname": "Smith",
                    "phoneNo": "08166557788",
                    "role": "caterer",
                  }
                }
              >
                <SideNav
                  active="menu"
                  logout={[Function]}
                  open={false}
                  push={[Function]}
                  toggleSideNav={[Function]}
                  user={
                    {
                      "address": "$, Herbert Macaulay Way, Yaba, Lagos",
                      "businessName": "Food Circle",
                      "email": "food@circle.com",
                      "firstname": "Dave",
                      "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
                      "lastname": "Smith",
                      "phoneNo": "08166557788",
                      "role": "caterer",
                    }
                  }
                >
                  <div
                    className="sidenav null"
                    id="sidenav"
                  >
                    <div
                      className="sidenav-content"
                    >
                      <div
                        className="sidenav-header"
                      >
                        <CloseIcon
                          btnID={null}
                          clickHandler={[Function]}
                          divClass="d-none-md"
                        >
                          <div
                            className="close d-none-md"
                          >
                            <Link
                              aria-hidden="true"
                              className={null}
                              clickHandler={[Function]}
                              data-tooltip-content={null}
                              data-tooltip-id={null}
                              id={null}
                            >
                              <button
                                aria-hidden="true"
                                className="link-btn null"
                                data-tooltip-content={null}
                                data-tooltip-id={null}
                                id={null}
                                onClick={[Function]}
                                type="button"
                              >
                                ×
                              </button>
                            </Link>
                          </div>
                        </CloseIcon>
                        <div
                          className="sidenav-title"
                        >
                          <h3
                            className="d-flex-md"
                          >
                            <Link
                              href="/"
                              to="/"
                            >
                              <a
                                href="/"
                              >
                                BOOK-A-MEAL
                              </a>
                            </Link>
                          </h3>
                          <div
                            className="username-circle"
                          >
                            <p>
                              F
                            </p>
                          </div>
                          <p>
                            Food Circle
                          </p>
                          <span>
                            <Link
                              className={null}
                              clickHandler={[Function]}
                              data-tooltip-content={null}
                              data-tooltip-id={null}
                              id={null}
                            >
                              <button
                                className="link-btn null"
                                data-tooltip-content={null}
                                data-tooltip-id={null}
                                id={null}
                                onClick={[Function]}
                                type="button"
                              >
                                Logout
                              </button>
                            </Link>
                          </span>
                        </div>
                      </div>
                      <div
                        className="sidenav-body"
                      >
                        <Link
                          className="menu-item false"
                          clickHandler={[Function]}
                          data-tooltip-content={null}
                          data-tooltip-id={null}
                          id={null}
                        >
                          <button
                            className="link-btn menu-item false"
                            data-tooltip-content={null}
                            data-tooltip-id={null}
                            id={null}
                            onClick={[Function]}
                            type="button"
                          >
                            Dashboard
                          </button>
                        </Link>
                        <Link
                          className="menu-item false"
                          clickHandler={[Function]}
                          data-tooltip-content={null}
                          data-tooltip-id={null}
                          id={null}
                        >
                          <button
                            className="link-btn menu-item false"
                            data-tooltip-content={null}
                            data-tooltip-id={null}
                            id={null}
                            onClick={[Function]}
                            type="button"
                          >
                            Meals
                          </button>
                        </Link>
                        <Link
                          className="menu-item active"
                          clickHandler={[Function]}
                          data-tooltip-content={null}
                          data-tooltip-id={null}
                          id={null}
                        >
                          <button
                            className="link-btn menu-item active"
                            data-tooltip-content={null}
                            data-tooltip-id={null}
                            id={null}
                            onClick={[Function]}
                            type="button"
                          >
                            Menu
                          </button>
                        </Link>
                        <Link
                          className="menu-item false"
                          clickHandler={[Function]}
                          data-tooltip-content={null}
                          data-tooltip-id={null}
                          id={null}
                        >
                          <button
                            className="link-btn menu-item false"
                            data-tooltip-content={null}
                            data-tooltip-id={null}
                            id={null}
                            onClick={[Function]}
                            type="button"
                          >
                            Orders
                          </button>
                        </Link>
                      </div>
                    </div>
                  </div>
                </SideNav>
              </Connect(SideNav)>
              <div
                className="content-wrapper"
                id="has-modal"
              >
                <div
                  className="content-wrapper meals menu-meals"
                >
                  <div
                    className="date d-none-md"
                  >
                    <h2>
                      Thursday, 1st January 1970
                       
                      <span
                        style={
                          {
                            "cursor": "pointer",
                          }
                        }
                      >
                         ▾
                      </span>
                    </h2>
                    <DatePicker
                      handleSelectDate={[Function]}
                      screenSize={null}
                    >
                      <div
                        className="datepicker-div"
                      >
                        <input
                          id="datepicker"
                          onChange={[Function]}
                          type="date"
                        />
                      </div>
                    </DatePicker>
                  </div>
                  <div
                    className="top"
                  >
                    <button
                      className="btn btn-pri"
                      id="menu-modal-btn"
                      onClick={[Function]}
                      type="button"
                    >
                      Set Menu
                    </button>
                  </div>
                  <div
                    className="page-heading"
                  >
                    <h2>
                      Meal Items on This Day's Menu
                    </h2>
                    <hr />
                  </div>
                  <CardGroup
                    items={
                      [
                        <MealCard
                          inBasket={false}
                          meal={
                            {
                              "description": "Jollof Rice, Beef and Plantain. 2 pieces of beef per plate",
                              "id": "81211c24-51c0-46ec-b1e0-18db55880958",
                              "imageUrl": "http://www.preciouscore.com/wp-content/uploads/2017/11/How-to-cook-jollof-rice-in-the-oven-750x500.jpg",
                              "price": "1500.00",
                              "title": "Jollof Rice, Beef and Plantain",
                              "vegetarian": false,
                            }
                          }
                          orderMeal={null}
                          toggleModal={null}
                          type="menu"
                        />,
                        <MealCard
                          inBasket={false}
                          meal={
                            {
                              "description": "Sharwama contains no animal products, perfect for dieters",
                              "id": "36d525d1-efc9-4b75-9999-3e3d8dc64ce3",
                              "imageUrl": "https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&h=350",
                              "price": "1200.00",
                              "title": "Vegetable Sharwama and Guava Smoothie",
                              "vegetarian": true,
                            }
                          }
                          orderMeal={null}
                          toggleModal={null}
                          type="menu"
                        />,
                      ]
                    }
                    loadMore={[Function]}
                    metadata={{}}
                  >
                    <div
                      className="card-group meals-wrapper"
                      id="card-group"
                    >
                      <InfiniteLoader
                        height={null}
                        items={
                          [
                            <MealCard
                              inBasket={false}
                              meal={
                                {
                                  "description": "Jollof Rice, Beef and Plantain. 2 pieces of beef per plate",
                                  "id": "81211c24-51c0-46ec-b1e0-18db55880958",
                                  "imageUrl": "http://www.preciouscore.com/wp-content/uploads/2017/11/How-to-cook-jollof-rice-in-the-oven-750x500.jpg",
                                  "price": "1500.00",
                                  "title": "Jollof Rice, Beef and Plantain",
                                  "vegetarian": false,
                                }
                              }
                              orderMeal={null}
                              toggleModal={null}
                              type="menu"
                            />,
                            <MealCard
                              inBasket={false}
                              meal={
                                {
                                  "description": "Sharwama contains no animal products, perfect for dieters",
                                  "id": "36d525d1-efc9-4b75-9999-3e3d8dc64ce3",
                                  "imageUrl": "https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&h=350",
                                  "price": "1200.00",
                                  "title": "Vegetable Sharwama and Guava Smoothie",
                                  "vegetarian": true,
                                }
                              }
                              orderMeal={null}
                              toggleModal={null}
                              type="menu"
                            />,
                          ]
                        }
                        loadMore={[Function]}
                        metadata={{}}
                      >
                        <InfiniteScroll
                          dataLength={2}
                          hasMore={false}
                          height={null}
                          loader={
                            <div
                              className="text-center"
                            >
                              <MiniPreloader />
                            </div>
                          }
                          next={[Function]}
                        >
                          <div
                            className="infinite-scroll-component__outerdiv"
                            style={{}}
                          >
                            <div
                              className="infinite-scroll-component "
                              style={
                                {
                                  "WebkitOverflowScrolling": "touch",
                                  "height": "auto",
                                  "overflow": "auto",
                                }
                              }
                            >
                              <div
                                className="scroller"
                              >
                                <MealCard
                                  inBasket={false}
                                  key="81211c24-51c0-46ec-b1e0-18db55880958"
                                  meal={
                                    {
                                      "description": "Jollof Rice, Beef and Plantain. 2 pieces of beef per plate",
                                      "id": "81211c24-51c0-46ec-b1e0-18db55880958",
                                      "imageUrl": "http://www.preciouscore.com/wp-content/uploads/2017/11/How-to-cook-jollof-rice-in-the-oven-750x500.jpg",
                                      "price": "1500.00",
                                      "title": "Jollof Rice, Beef and Plantain",
                                      "vegetarian": false,
                                    }
                                  }
                                  orderMeal={null}
                                  toggleModal={null}
                                  type="menu"
                                >
                                  <div
                                    className="meal-card"
                                    id="81211c24-51c0-46ec-b1e0-18db55880958"
                                  >
                                    <div
                                      className="meal-card-header"
                                    >
                                      <img
                                        alt="meal"
                                        src="http://www.preciouscore.com/wp-content/uploads/2017/11/How-to-cook-jollof-rice-in-the-oven-750x500.jpg"
                                      />
                                      <div
                                        className="menu-card-title"
                                      >
                                        <p>
                                          Jollof Rice, Beef and Plantain
                                        </p>
                                      </div>
                                    </div>
                                    <div
                                      className="meal-card-body"
                                    >
                                      <div>
                                        <h3>
                                          ₦
                                          1500.00
                                        </h3>
                                        <p
                                          className="meal-description"
                                          data-tooltip-content="Jollof Rice, Beef and Plantain. 2 pieces of beef per plate"
                                          data-tooltip-id="meal-card-tooltip"
                                        >
                                          Jollof Rice, Beef and Plantain. 2 pieces of beef per plate
                                        </p>
                                      </div>
                                    </div>
                                    <ForwardRef
                                      className="tooltip"
                                      effect="solid"
                                      id="meal-card-tooltip"
                                      place="top"
                                      type="dark"
                                    >
                                      <O
                                        activeAnchor={null}
                                        className="tooltip"
                                        clickable={false}
                                        closeOnEsc={false}
                                        closeOnResize={false}
                                        closeOnScroll={false}
                                        content={null}
                                        contentWrapperRef={
                                          {
                                            "current": null,
                                          }
                                        }
                                        defaultIsOpen={false}
                                        delayHide={0}
                                        delayShow={0}
                                        events={
                                          [
                                            "hover",
                                          ]
                                        }
                                        float={false}
                                        forwardRef={null}
                                        hidden={false}
                                        id="meal-card-tooltip"
                                        imperativeModeOnly={false}
                                        noArrow={false}
                                        offset={10}
                                        openOnClick={false}
                                        place="top"
                                        positionStrategy="absolute"
                                        role="tooltip"
                                        setActiveAnchor={[Function]}
                                        variant="dark"
                                        wrapper="div"
                                      />
                                    </ForwardRef>
                                  </div>
                                </MealCard>
                                <MealCard
                                  inBasket={false}
                                  key="36d525d1-efc9-4b75-9999-3e3d8dc64ce3"
                                  meal={
                                    {
                                      "description": "Sharwama contains no animal products, perfect for dieters",
                                      "id": "36d525d1-efc9-4b75-9999-3e3d8dc64ce3",
                                      "imageUrl": "https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&h=350",
                                      "price": "1200.00",
                                      "title": "Vegetable Sharwama and Guava Smoothie",
                                      "vegetarian": true,
                                    }
                                  }
                                  orderMeal={null}
                                  toggleModal={null}
                                  type="menu"
                                >
                                  <div
                                    className="meal-card"
                                    id="36d525d1-efc9-4b75-9999-3e3d8dc64ce3"
                                  >
                                    <div
                                      className="meal-card-header"
                                    >
                                      <span
                                        className="veg-ribbon"
                                      >
                                        Vegetarian
                                      </span>
                                      <img
                                        alt="meal"
                                        src="https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&h=350"
                                      />
                                      <div
                                        className="menu-card-title"
                                      >
                                        <p>
                                          Vegetable Sharwama and Guava Smoothie
                                        </p>
                                      </div>
                                    </div>
                                    <div
                                      className="meal-card-body"
                                    >
                                      <div>
                                        <h3>
                                          ₦
                                          1200.00
                                        </h3>
                                        <p
                                          className="meal-description"
                                          data-tooltip-content="Sharwama contains no animal products, perfect for dieters"
                                          data-tooltip-id="meal-card-tooltip"
                                        >
                                          Sharwama contains no animal products, perfect for dieters
                                        </p>
                                      </div>
                                    </div>
                                    <ForwardRef
                                      className="tooltip"
                                      effect="solid"
                                      id="meal-card-tooltip"
                                      place="top"
                                      type="dark"
                                    >
                                      <O
                                        activeAnchor={null}
                                        className="tooltip"
                                        clickable={false}
                                        closeOnEsc={false}
                                        closeOnResize={false}
                                        closeOnScroll={false}
                                        content={null}
                                        contentWrapperRef={
                                          {
                                            "current": null,
                                          }
                                        }
                                        defaultIsOpen={false}
                                        delayHide={0}
                                        delayShow={0}
                                        events={
                                          [
                                            "hover",
                                          ]
                                        }
                                        float={false}
                                        forwardRef={null}
                                        hidden={false}
                                        id="meal-card-tooltip"
                                        imperativeModeOnly={false}
                                        noArrow={false}
                                        offset={10}
                                        openOnClick={false}
                                        place="top"
                                        positionStrategy="absolute"
                                        role="tooltip"
                                        setActiveAnchor={[Function]}
                                        variant="dark"
                                        wrapper="div"
                                      />
                                    </ForwardRef>
                                  </div>
                                </MealCard>
                              </div>
                            </div>
                          </div>
                        </InfiniteScroll>
                      </InfiniteLoader>
                    </div>
                  </CardGroup>
                </div>
              </div>
            </div>
            <Connect(Modal)
              isFetching={false}
              logout={[Function]}
              showTime={false}
              type="menu"
              updateCurrentDate={[Function]}
              uploading={false}
              user={
                {
                  "address": "$, Herbert Macaulay Way, Yaba, Lagos",
                  "businessName": "Food Circle",
                  "email": "food@circle.com",
                  "firstname": "Dave",
                  "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
                  "lastname": "Smith",
                  "phoneNo": "08166557788",
                  "role": "caterer",
                }
              }
            >
              <Modal
                isFetching={false}
                logout={[Function]}
                open={false}
                showTime={false}
                toggleModal={[Function]}
                type={null}
                updateCurrentDate={[Function]}
                uploading={false}
                user={
                  {
                    "address": "$, Herbert Macaulay Way, Yaba, Lagos",
                    "businessName": "Food Circle",
                    "email": "food@circle.com",
                    "firstname": "Dave",
                    "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
                    "lastname": "Smith",
                    "phoneNo": "08166557788",
                    "role": "caterer",
                  }
                }
              />
            </Connect(Modal)>
            <Footer>
              <div
                className="footer"
              >
                <p>
                  © 2018. Iveren Shaguy. All images were gotten from the internet and are not mine.
                </p>
              </div>
            </Footer>
          </div>
        </View>
      </Connect(View)>
    </CatererMenu>
  </Connect(CatererMenu)>
</Provider>
`;

exports[`CatererMenu should render CatererMenu component correctly and show Meal Cards 1`] = `
<Fragment>
  <Connect(View)
    showTime={false}
    type="menu"
    updateCurrentDate={[Function]}
  >
    <div
      className="content-wrapper meals menu-meals"
    >
      <div
        className="date d-none-md"
      >
        <h2>
          Thursday, 1st January 1970
           
          <span
            style={
              {
                "cursor": "pointer",
              }
            }
          >
             ▾
          </span>
        </h2>
        <DatePicker
          handleSelectDate={[Function]}
          screenSize={null}
        />
      </div>
      <div
        className="top"
      >
        <button
          className="btn btn-pri"
          id="menu-modal-btn"
          onClick={[Function]}
          type="button"
        >
          Set Menu
        </button>
      </div>
      <div
        className="page-heading"
      >
        <h2>
          Meal Items on This Day's Menu
        </h2>
        <hr />
      </div>
      <CardGroup
        items={
          [
            <MealCard
              inBasket={false}
              meal={
                {
                  "description": "Jollof Rice, Beef and Plantain. 2 pieces of beef per plate",
                  "id": "81211c24-51c0-46ec-b1e0-18db55880958",
                  "imageUrl": "http://www.preciouscore.com/wp-content/uploads/2017/11/How-to-cook-jollof-rice-in-the-oven-750x500.jpg",
                  "price": "1500.00",
                  "title": "Jollof Rice, Beef and Plantain",
                  "vegetarian": false,
                }
              }
              orderMeal={null}
              toggleModal={null}
              type="menu"
            />,
            <MealCard
              inBasket={false}
              meal={
                {
                  "description": "Sharwama contains no animal products, perfect for dieters",
                  "id": "36d525d1-efc9-4b75-9999-3e3d8dc64ce3",
                  "imageUrl": "https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&h=350",
                  "price": "1200.00",
                  "title": "Vegetable Sharwama and Guava Smoothie",
                  "vegetarian": true,
                }
              }
              orderMeal={null}
              toggleModal={null}
              type="menu"
            />,
          ]
        }
        loadMore={[Function]}
        metadata={
          {
            "next": "next",
            "pages": 2,
            "prev": "prev",
            "total": 5,
          }
        }
      />
    </div>
  </Connect(View)>
</Fragment>
`;

exports[`CatererMenu should render message when there are no caterer on the caterer 1`] = `
<Fragment>
  <Connect(View)
    showTime={false}
    type="menu"
    updateCurrentDate={[Function]}
  >
    <div
      className="content-wrapper meals menu-meals"
    >
      <div
        className="date d-none-md"
      >
        <h2>
          Thursday, 1st January 1970
           
          <span
            style={
              {
                "cursor": "pointer",
              }
            }
          >
             ▾
          </span>
        </h2>
        <DatePicker
          handleSelectDate={[Function]}
          screenSize={null}
        />
      </div>
      <div
        className="top"
      >
        <button
          className="btn btn-pri"
          id="menu-modal-btn"
          onClick={[Function]}
          type="button"
        >
          Set Menu
        </button>
      </div>
      <div
        className="page-heading"
      >
        <h2>
          Meal Items on This Day's Menu
        </h2>
        <hr />
      </div>
      <p
        className="text-center info"
      >
        There are no Meal Items on this Menu
      </p>
    </div>
  </Connect(View)>
</Fragment>
`;
